--- a/implantació-de-github.html
+++ b/implantació-de-github.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-10" />
+<meta name="date" content="2022-04-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -102,14 +102,15 @@
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-de-github.html"><a href="implantació-de-github.html"><i class="fa fa-check"></i><b>3</b> Implantació de GitHub<span></span></a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#plantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Plantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
-<li class="chapter" data-level="3.2" data-path="implantació-de-github.html"><a href="implantació-de-github.html#beneficis-de-la-seva-plantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva plantació<span></span></a></li>
+<li class="chapter" data-level="3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
+<li class="chapter" data-level="3.2" data-path="implantació-de-github.html"><a href="implantació-de-github.html#beneficis-de-la-seva-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva implantació<span></span></a></li>
 <li class="chapter" data-level="3.3" data-path="implantació-de-github.html"><a href="implantació-de-github.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> mode de funcionament<span></span></a>
 <ul>
 <li class="chapter" data-level="3.3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> breu tutorial per al funcionament<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="3.4" data-path="implantació-de-github.html"><a href="implantació-de-github.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> instal·lació d’un repositori en el centre<span></span></a></li>
-<li class="chapter" data-level="3.5" data-path="implantació-de-github.html"><a href="implantació-de-github.html#possible-plantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> possible plantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.5" data-path="implantació-de-github.html"><a href="implantació-de-github.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-de-github.html"><a href="implantació-de-github.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a hugo<span></span></a>
 <ul>
@@ -163,11 +164,30 @@
             <section class="normal" id="section-">
 <div id="implantació-de-github" class="section level1 hasAnchor" number="3">
 <h1><span class="header-section-number">Projecte 3</span> Implantació de GitHub<a href="implantació-de-github.html#implantació-de-github" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<div id="plantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="section level2 hasAnchor" number="3.1">
-<h2><span class="header-section-number">3.1</span> Plantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<a href="implantació-de-github.html#plantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>Explorar la forma d’integrar el concepte git en les arts escèniques per a la
+realitzacio dels projectes de la empresa, la elaboració de la revista, o la creació d’obres de teatre,
+en els avantatges que proporciona el seguiment de version en el procés creatiu.</p>
+<div id="implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="section level2 hasAnchor" number="3.1">
+<h2><span class="header-section-number">3.1</span> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<a href="implantació-de-github.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<ul>
+<li>Es pot realitzar mitjan la creació d’un compte en una de les plataformes git que hi ha en internet,</li>
+<li>Configurant un servidor git en el propi centre de treball</li>
+<li>Git i un servidor web, esta opció es per a gastar el entorn git en consola, no es recomana per
+a la empresa.</li>
+<li>Un entorn web , he fet proves en gitlab i gitea, i el final crec que la millor opció es la de gitea per el
+reduït gast de recursos que fa i la facilitat d’us.</li>
+<li>Es pot mirar de enllaçar el repositori git en el conter de drive que te la empresa, per fer un
+repositori privat per als membres.</li>
+</ul>
 </div>
-<div id="beneficis-de-la-seva-plantació" class="section level2 hasAnchor" number="3.2">
-<h2><span class="header-section-number">3.2</span> Beneficis de la seva plantació<a href="implantació-de-github.html#beneficis-de-la-seva-plantació" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="beneficis-de-la-seva-implantació" class="section level2 hasAnchor" number="3.2">
+<h2><span class="header-section-number">3.2</span> Beneficis de la seva implantació<a href="implantació-de-github.html#beneficis-de-la-seva-implantació" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>El beneficis, son els mateixos que per a la creació de projectes informatics,
+pero que son poc utilitzats en el mon de les lletres.
+* Posibilitat de crear obres col·laboratives.
+* El guardat de les diferents version segons va desenvolupant-se el projecte,
+i poder tornar en el temps si alguna cosa no va be.
+* Bifurcar camins d’exploració en la creació literaria.</p>
 </div>
 <div id="mode-de-funcionament" class="section level2 hasAnchor" number="3.3">
 <h2><span class="header-section-number">3.3</span> mode de funcionament<a href="implantació-de-github.html#mode-de-funcionament" class="anchor-section" aria-label="Anchor link to header"></a></h2>
@@ -177,9 +197,24 @@
 </div>
 <div id="installació-dun-repositori-en-el-centre" class="section level2 hasAnchor" number="3.4">
 <h2><span class="header-section-number">3.4</span> instal·lació d’un repositori en el centre<a href="implantació-de-github.html#installació-dun-repositori-en-el-centre" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>Procés d’instal.lacio d’un repositori de git</p>
+<ul>
+<li><p>El git i apache <code>buscar la fulla on ho esplicaa</code></p></li>
+<li><p>Instal.lacio de <a href="https://docs.gitea.io/en-us/">gitea</a> , o be directament, o per una imatge docker</p></li>
+<li><p>Servir el <a href="https://www.permikkelsen.dk/how-to-host-your-git-repository-on-onedrive.html">git</a>
+en un espai onedriver, pareix que es per consola, mirar algun client de git desktop que facilita les coses.</p></li>
+</ul>
 </div>
-<div id="possible-plantació-en-el-repositori-en-internet" class="section level2 hasAnchor" number="3.5">
-<h2><span class="header-section-number">3.5</span> possible plantació en el repositori en internet<a href="implantació-de-github.html#possible-plantació-en-el-repositori-en-internet" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="possible-implantació-en-el-repositori-en-internet" class="section level2 hasAnchor" number="3.5">
+<h2><span class="header-section-number">3.5</span> Possible implantació en el repositori en internet<a href="implantació-de-github.html#possible-implantació-en-el-repositori-en-internet" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>El mes fácil seria el traure un comptem en una de les plataformes que hi ha en internet,
+el problema es el recel que tinga l’empresa per el tema de privacitat.
+Estes plataformes tenen l’opcio de crear repositoris privats,</p>
+</div>
+<div id="explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa" class="section level2 hasAnchor" number="3.6">
+<h2><span class="header-section-number">3.6</span> Explorar wikimedia per a la realització de escritura col·laborativa<a href="implantació-de-github.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>L’escritura col·laborativa mitjançant ferramentes de xarxa, com la wikipedia, on es posible
+discutir els convits proposat. explorar aquest tipus de projectes.</p>
 
 </div>
 </div>
