--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-10" />
+<meta name="date" content="2022-04-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -100,16 +100,17 @@
 <li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="implantació-de-github.html"><a href="implantació-de-github.html"><i class="fa fa-check"></i><b>3</b> Implantació de GitHub<span></span></a>
+<li class="chapter" data-level="3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació de entorn Git<span></span></a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#plantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Plantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
-<li class="chapter" data-level="3.2" data-path="implantació-de-github.html"><a href="implantació-de-github.html#beneficis-de-la-seva-plantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva plantació<span></span></a></li>
-<li class="chapter" data-level="3.3" data-path="implantació-de-github.html"><a href="implantació-de-github.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> mode de funcionament<span></span></a>
+<li class="chapter" data-level="3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
+<li class="chapter" data-level="3.2" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#beneficis-de-la-seva-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva implantació<span></span></a></li>
+<li class="chapter" data-level="3.3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> Mode de funcionament<span></span></a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> breu tutorial per al funcionament<span></span></a></li>
+<li class="chapter" data-level="3.3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> Breu tutorial per al funcionament<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="implantació-de-github.html"><a href="implantació-de-github.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> instal·lació d’un repositori en el centre<span></span></a></li>
-<li class="chapter" data-level="3.5" data-path="implantació-de-github.html"><a href="implantació-de-github.html#possible-plantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> possible plantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.4" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
+<li class="chapter" data-level="3.5" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a hugo<span></span></a>
 <ul>
@@ -164,14 +165,19 @@
 <div id="header">
 <h1 class="title">Arts escèniques</h1>
 <p class="author"><em>Ramiro Palau</em></p>
-<p class="date"><em>2022-04-10</em></p>
+<p class="date"><em>2022-04-12</em></p>
 </div>
 <div id="about" class="section level1 unnumbered hasAnchor">
 <h1>About<a href="index.html#about" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>Documentació dels projectes proposats a realitzar en el desenvolupament de les practiques realitzades en <strong>Espacio Inestable</strong> com a realització de les practiques d’empresa.</p>
+<p>Documentació dels projectes proposats a realitzar en el desenvolupament de les practiques realitzades en <strong>Espacio Inestable</strong>.</p>
 <div id="usage" class="section level2 unnumbered hasAnchor">
 <h2>Usage<a href="index.html#usage" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Anirem detallant els diferents projectes que es proposen a la empresa per a digitalitzar <em>les arts escèniques</em>, en una descripció de la seva posada en funcionament, per veure si els interessa que es realitze. En cas afirmatiu es aniria desenvolupant la manera de implantar-lo, cost, i detallarem el seu funcionament, per a que aquest document siga una guia per mantindre-lo o replicar-lo.</p>
+<p>Anirem detallant els diferents projectes que es proposen per a digitalitzar <em>les arts escèniques</em>,
+amb una breu descripció de la seva posada en funcionament, requisits, pros i contres.</p>
+<p>En cas afirmatiu s’aniria desenvolupant la manera de implantar-lo, cost, i detallarem el seu
+funcionament i configuració.</p>
+<p>La idea, es que aquest document siga una guia per mantindre els projectes realitzats o replicar-los en altres llocs,
+i anar actualitzant els recursos, com forme evolucione la tecnologia i necessitats de l’empresa.</p>
 
 </div>
 </div>
