--- a/installació-de-wifi-per-al-pati-de-butaques.html
+++ b/installació-de-wifi-per-al-pati-de-butaques.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-10" />
+<meta name="date" content="2022-04-12" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="streaming.html"/>
-<link rel="next" href="implantació-de-github.html"/>
+<link rel="next" href="implantació-de-entorn-git.html"/>
 <script src="assets/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -100,16 +100,17 @@
 <li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="implantació-de-github.html"><a href="implantació-de-github.html"><i class="fa fa-check"></i><b>3</b> Implantació de GitHub<span></span></a>
+<li class="chapter" data-level="3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació de entorn Git<span></span></a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#plantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Plantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
-<li class="chapter" data-level="3.2" data-path="implantació-de-github.html"><a href="implantació-de-github.html#beneficis-de-la-seva-plantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva plantació<span></span></a></li>
-<li class="chapter" data-level="3.3" data-path="implantació-de-github.html"><a href="implantació-de-github.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> mode de funcionament<span></span></a>
+<li class="chapter" data-level="3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
+<li class="chapter" data-level="3.2" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#beneficis-de-la-seva-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva implantació<span></span></a></li>
+<li class="chapter" data-level="3.3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> Mode de funcionament<span></span></a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="implantació-de-github.html"><a href="implantació-de-github.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> breu tutorial per al funcionament<span></span></a></li>
+<li class="chapter" data-level="3.3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> Breu tutorial per al funcionament<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="implantació-de-github.html"><a href="implantació-de-github.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> instal·lació d’un repositori en el centre<span></span></a></li>
-<li class="chapter" data-level="3.5" data-path="implantació-de-github.html"><a href="implantació-de-github.html#possible-plantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> possible plantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.4" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
+<li class="chapter" data-level="3.5" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a hugo<span></span></a>
 <ul>
@@ -183,7 +184,7 @@
         </div>
       </div>
 <a href="streaming.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="implantació-de-github.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="implantació-de-entorn-git.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="assets/gitbook-2.6.7/js/app.min.js"></script>
