--- a/implantació-de-entorn-git.html
+++ b/implantació-de-entorn-git.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-12" />
+<meta name="date" content="2022-04-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -79,18 +79,23 @@
 <li class="chapter" data-level="1" data-path="streaming.html"><a href="streaming.html"><i class="fa fa-check"></i><b>1</b> Streaming<span></span></a>
 <ul>
 <li class="chapter" data-level="1.1" data-path="streaming.html"><a href="streaming.html#materials"><i class="fa fa-check"></i><b>1.1</b> Materials<span></span></a></li>
-<li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-de-instillació"><i class="fa fa-check"></i><b>1.2</b> Projecte de instil·lació<span></span></a></li>
-<li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.3</b> Software<span></span></a>
+<li class="chapter" data-level="1.2" data-path="streaming.html"><a href="streaming.html#projecte-dinstillació"><i class="fa fa-check"></i><b>1.2</b> Projecte d’instil·lació<span></span></a></li>
+<li class="chapter" data-level="1.3" data-path="streaming.html"><a href="streaming.html#pressupost"><i class="fa fa-check"></i><b>1.3</b> Pressupost<span></span></a></li>
+<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#software"><i class="fa fa-check"></i><b>1.4</b> Software<span></span></a>
 <ul>
-<li class="chapter" data-level="1.3.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.3.1</b> <span>OBS</span><span></span></a></li>
-<li class="chapter" data-level="1.3.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.3.2</b> <span>Livestream Studio</span><span></span></a></li>
-<li class="chapter" data-level="1.3.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.3.3</b> <span>Wirecast</span><span></span></a></li>
-<li class="chapter" data-level="1.3.4" data-path="streaming.html"><a href="streaming.html#mimolive"><i class="fa fa-check"></i><b>1.3.4</b> <span>MimoLive</span><span></span></a></li>
+<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#obs"><i class="fa fa-check"></i><b>1.4.1</b> <span>OBS</span><span></span></a></li>
+<li class="chapter" data-level="1.4.2" data-path="streaming.html"><a href="streaming.html#livestream-studio"><i class="fa fa-check"></i><b>1.4.2</b> <span>Livestream Studio</span><span></span></a></li>
+<li class="chapter" data-level="1.4.3" data-path="streaming.html"><a href="streaming.html#wirecast"><i class="fa fa-check"></i><b>1.4.3</b> <span>Wirecast</span><span></span></a></li>
+<li class="chapter" data-level="1.4.4" data-path="streaming.html"><a href="streaming.html#mimolive"><i class="fa fa-check"></i><b>1.4.4</b> <span>MimoLive</span><span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="1.4" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.4</b> Hardware necessari<span></span></a>
+<li class="chapter" data-level="1.5" data-path="streaming.html"><a href="streaming.html#hardware-necessari"><i class="fa fa-check"></i><b>1.5</b> Hardware necessari<span></span></a>
 <ul>
-<li class="chapter" data-level="1.4.1" data-path="streaming.html"><a href="streaming.html#càmeres-ip"><i class="fa fa-check"></i><b>1.4.1</b> Càmeres ip<span></span></a></li>
+<li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
+<li class="chapter" data-level="1.5.2" data-path="streaming.html"><a href="streaming.html#servidor-de-disc"><i class="fa fa-check"></i><b>1.5.2</b> Servidor de disc<span></span></a></li>
+<li class="chapter" data-level="1.5.3" data-path="streaming.html"><a href="streaming.html#càmeres-ip"><i class="fa fa-check"></i><b>1.5.3</b> Càmeres ip<span></span></a></li>
+<li class="chapter" data-level="1.5.4" data-path="streaming.html"><a href="streaming.html#el-conter-del-streaming"><i class="fa fa-check"></i><b>1.5.4</b> El conter del streaming<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="1.6" data-path="streaming.html"><a href="streaming.html#muntatge"><i class="fa fa-check"></i><b>1.6</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html"><i class="fa fa-check"></i><b>2</b> Instal·lació de wifi per al pati de butaques<span></span></a>
 <ul>
@@ -99,6 +104,7 @@
 <li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potencia-de-la-connexió-de-internet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potencia de la connexió de internet per donar servei<span></span></a></li>
 <li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="2.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1"><i class="fa fa-check"></i><b>2.2</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació de entorn Git<span></span></a>
 <ul>
@@ -112,10 +118,10 @@
 <li class="chapter" data-level="3.5" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
 <li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a hugo<span></span></a>
+<li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
 <li class="chapter" data-level="4.1" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#avantatges-de-la-migració"><i class="fa fa-check"></i><b>4.1</b> Avantatges de la migració<span></span></a></li>
-<li class="chapter" data-level="4.2" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#mode-de-implementar-la-migració"><i class="fa fa-check"></i><b>4.2</b> Mode de implementar la migració<span></span></a>
+<li class="chapter" data-level="4.2" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#mode-dimplementar-la-migració"><i class="fa fa-check"></i><b>4.2</b> Mode d’implementar la migració<span></span></a>
 <ul>
 <li class="chapter" data-level="4.2.1" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#conversió-dels-posts-de-wordpress-a-md"><i class="fa fa-check"></i><b>4.2.1</b> Conversió dels posts de WordPress a md<span></span></a></li>
 </ul></li>
@@ -145,6 +151,7 @@
 <li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-de-entrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda de entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
+<li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
 </ul>
 
       </nav>
@@ -270,7 +277,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["_main.pdf", "_main.epub"],
+"download": ["Arts_Escèniques.pdf", "Arts_Escèniques.epub"],
 "search": {
 "engine": "fuse",
 "options": null
